CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(RW_Mutex VERSION 0.1.0)

ADD_COMPILE_OPTIONS(-std=c++11 -o3 -lpthread)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

ADD_LIBRARY(rw_mutex SHARED ${SRC})
SET_TARGET_PROPERTIES(rw_mutex PROPERTIES VERSION 0.1 SOVERSION 0) # 指定版本号以及覆盖版本号

ADD_LIBRARY(rw_mutex_static STATIC ${SRC})
SET_TARGET_PROPERTIES(rw_mutex_static PROPERTIES OUTPUT_NAME "rw_mutex")